--- a/ciencias-de-dados-main/index.html
+++ b/ciencias-de-dados-main/index.html
@@ -23,3 +23,14 @@
         <p>Desenvolvido por Giovanny</p>
     </footer>
 </body>
+<!-- código omitido -->
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redes Sociais</title>
+     <link rel="stylesheet" href="style.css">
+</head>
+
+<!-- código omitido -->
+<script type="module" src="graficos/informacoesGlobais.js"></script>
